--- a/Exercícios/exerc06/index.html
+++ b/Exercícios/exerc06/index.html
@@ -8,7 +8,9 @@
     <link rel="stylesheet" href="style/style.css">
 </head>
 <body>
-    <div class="resultado"></div>
+    <div class="resultado">
+        <h1 id="resultado-título"></h1>
+    </div>
     <script src="js/script.js"></script>
 </body>
 </html>
