--- a/Exercícios/exerc09/index.html
+++ b/Exercícios/exerc09/index.html
@@ -7,7 +7,7 @@
     <meta name="keywords" content="modelo, HTML,CSS, JAVASCRIPT, BASIC AND ADVANCED">
     <meta name="Author" content="Rafaelsurfce">
     <meta name="description" content="Pagina utilizada para modelo de projetos e atividades do curso">
-    <title>Modelo</title>
+    <title>Date</title>
 
     <link rel="stylesheet" href="assets/css/style.css">
 </head>
