--- a/Exercícios/exerc11/index.html
+++ b/Exercícios/exerc11/index.html
@@ -14,10 +14,14 @@
 <body>
     <div class="container">
         <h1>Lorem ipsum dolor sit</h1>
-        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit.  </p>
-        <p>Nobis, consectetur sint veniam quis molestias tempore eveniet consequuntur delectus,</p>
-        <p>accusamus totam illum deleniti tenetur dolorem iste porro error quae doloremque quam.</p>
-        <p> Voluptatum libero dignissimos maiores nihil fuga inventore</p>
+        <div class="paragrafos">
+            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Laboriosam dolor, eveniet quis, est iste adipisci eaque maiores accusantium blanditiis voluptate explicabo architecto consequatur incidunt nulla totam repudiandae, sunt et dolorem!</p>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Excepturi quae similique doloribus. Ea, pariatur vel odio voluptate at sunt. Aut nesciunt commodi repellendus similique laudantium veniam blanditiis ducimus totam hic!</p>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ex totam pariatur, harum enim ad facilis atque cumque voluptatibus nulla voluptates a ab debitis porro aut qui repudiandae provident cum tempore?</p>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Earum dignissimos ducimus voluptates commodi, tenetur ratione libero accusamus itaque hic iusto aperiam, voluptatum magnam harum dolores a recusandae reprehenderit debitis similique.</p>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusantium excepturi commodi nisi, quidem explicabo molestiae enim velit sit repellat dolores, ipsum molestias, ea quam quisquam esse vero sequi doloribus sint.</p>
+            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Perferendis voluptatem totam suscipit alias iste molestias voluptates eveniet, eum corrupti magni, facere, et laboriosam illo ipsam animi ipsa modi voluptas. Voluptatibus.</p>
+        </div>
     </div>
     <script src="assets/js/script.js"></script>
 </body>
