--- a/Exercícios/exerc13/index.html
+++ b/Exercícios/exerc13/index.html
@@ -16,8 +16,8 @@
         <h2>Meu timer</h2>
         <div class="time">00:00:00</div>
         <button class="iniciar">Iniciar</button>
-        <button class="pausar">Pausar</button>
-        <button class="zerar">Zerar</button>
+        <button class="pausar" disabled>Pausar</button>
+        <button class="zerar" disabled>Zerar</button>
         
     </div>
     <script src="assets/js/script.js"></script>
