--- a/Exercícios/exerc08/index.html
+++ b/Exercícios/exerc08/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,40 +8,74 @@
     <meta name="keywords" content="modelo, HTML,CSS, JAVASCRIPT, BASIC AND ADVANCED">
     <meta name="Author" content="Rafaelsurfce">
     <meta name="description" content="Pagina utilizada para modelo de projetos e atividades do curso">
-    <title>IMC: Cálculo do indice de Massa corporal</title>
+    <title>Calcule seu IMC</title>
 
     <link rel="stylesheet" href="assets/css/style.css">
 </head>
+
 <body>
-    <div class="container">
-        <h1 class="title">Tabela IMC</h1>
-        <ul class="intervalos">
-            <li class="list-title">IMC</li>
-            <li>Menor do que 18,5</li>
-            <li>Entre 18,5 e 24,9</li>
-            <li>Entre 25 e 29,9</li>
-            <li>Entre 30 e 34,9</li>
-            <li>Entre 35 e 39.9</li>
-            <li>Mais do que 40</li>
-        </ul>
-        <ul class="resultados">
-            <li class="list-title">Resultado</li>
-            <li>Abaixo do peso</li>
-            <li>Peso normal</li>
-            <li>Sobrepeso</li>
-            <li>Obesidade grau 1</li>
-            <li>Obesidade grau 2</li>
-            <li>Obesidade grau 3</li>
-        </ul>
-        <form action="" method="post" class="form-imc">
-            <h2 class="form-title">Calcule seu IMC</h2>
-            <label for="peso">Peso:</label> <input type="text" id="peso"  name="peso">
-            <label for="altura">Altura:</label><input type="text" id="altura" name="altura">
-            <input type="submit" class="btn-calcule" value="Calcular">
-        </form>
-        <p class="resultado">
-        </p>
-    </div>
+    <main class="container">
+        <header class="cabecalho">
+            <section class="table-imc">
+                <h1>Tabela IMC</h1>
+                <table>
+                    <thead> 
+                        <tr>
+                            <th>IMC</th>
+                            <th>Resultado</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        <tr>
+                            <td>Menos do que 18,5</td>
+                            <td>Abaixo do peso</td>
+                        </tr>
+                        <tr>
+                            <td>Entre 18,5 e 24,9</td>
+                            <td>Peso normal</td>
+                        </tr>
+                        <tr>
+                            <td>Entre 25 e 29,9</td>
+                            <td>Sobrepeso</td>
+                        </tr>
+                        <tr>
+                            <td>Entre 30 e 34,9</td>
+                            <td>Obesidade grau 1</td>
+                        </tr>
+                        <tr>
+                            <td>Entre 35 e 39,9</td>
+                            <td>Obesidade grau 2</td>
+                        </tr>
+                        <tr>
+                            <td>Mais do que 40</td>
+                            <td>Obesidade grau 3</td>
+                        </tr>
+
+                    </tbody>
+                </table>
+            </section>
+
+        </header>
+        <main class="content">
+            <section class="formulario">
+                <h1 class="form-title">Calcule seu IMC</h1>
+                <form action="" method="post" id="formulario">
+                    <label for="peso">Peso:</label>
+                    <input type="text" id="peso" >
+                    <label for="altura">Altura:</label>
+                    <input type="text" name="altura" id="altura">
+                    <input type="submit" value="Calcular" name="calcular">
+                </form>
+            </section>
+        </main>
+        <footer class="rodape">
+            <section id="result">
+
+
+            </section>
+        </footer>
+    </main>
     <script src="assets/js/script.js"></script>
 </body>
+
 </html>
