--- a/Modelos/modelo/index.html
+++ b/Modelos/modelo/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -11,7 +12,14 @@
 
     <link rel="stylesheet" href="assets/css/style.css">
 </head>
+
 <body>
+    <main class="container">
+        <header class="cabecalho"></header>
+        <main class="content"></main>
+        <footer class="rodape"></footer>
+    </main>
     <script src="assets/js/script.js"></script>
 </body>
+
 </html>
