--- a/Exercícios/exerc19/index.html
+++ b/Exercícios/exerc19/index.html
@@ -20,18 +20,18 @@
             <li>Usuário deverá ter entre 3 e 12 caracteres</li>
             <li>Senha Precisa ter entre 6 e 12 caracteres</li>
         </ul>
-        <form action="" method="post" class="formulario valid" id="formulario">
-            <label for="nome">Nome:</label>
+        <form action="" method="post" class="formulario" id="formulario">
+            <label for="nome">Nome</label>
             <input type="text" class="input-nome valid" id="nome">
-            <label for="sobrenome">Sobrenome:</label>
+            <label for="sobrenome">Sobrenome</label>
             <input type="text" class="input-sobrenome valid" id="sobrenome">
-            <label for="cpf">CPF:</label>
+            <label for="cpf">CPF</label>
             <input type="text" class="input-cpf valid" id="cpf">
-            <label for="usuario">Usuário:</label>
+            <label for="usuario">Usuário</label>
             <input type="text" class="input-usuario valid" id="usuario">
-            <label for="senha">Senha:</label>
+            <label for="senha">Senha</label>
             <input type="password" class="input-senha valid" id="senha">
-            <label for="repeatSenha">Repita Senha: </label> 
+            <label for="repeatSenha">Repita Senha</label> 
             <input type="password" class="input-repeatSenha valid" id="repeatSenha">
             <input type="submit" value="Enviar" class="input-submit">
         </form>
